grammar.js
    program: ($) =>
      seq(
        // any number of transactions, statements, or blocks with a terminating ;
        repeat(seq(choice($.transaction, $.statement, $.block), ';')),
        // optionally, a single statement without a terminating ;
        optional($.statement)
      ),

    keyword_select: (_) => make_keyword('select'),
    keyword_replace: (_) => make_keyword('replace'),
    keyword_update: (_) => make_keyword('update'),
    keyword_set: (_) => make_keyword('set'),
    keyword_from: (_) => make_keyword('from'),
    keyword_cross: (_) => make_keyword('cross'),
    keyword_join: (_) => make_keyword('join'),
    keyword_lateral: (_) => make_keyword('lateral'),
    keyword_on: (_) => make_keyword('on'),
    keyword_where: (_) => make_keyword('where'),
    keyword_order: (_) => make_keyword('order'),
    keyword_group: (_) => make_keyword('group'),
    keyword_by: (_) => make_keyword('by'),
    keyword_desc: (_) => make_keyword('desc'),
    keyword_limit: (_) => make_keyword('limit'),
    keyword_create: (_) => make_keyword('create'),
    keyword_as: (_) => make_keyword('as'),
    keyword_distinct: (_) => make_keyword('distinct'),
    keyword_separator: (_) => make_keyword('separator'),
    keyword_end: (_) => make_keyword('end'),
    keyword_in: (_) => make_keyword('in'),
    keyword_or: (_) => make_keyword('or'),
    keyword_not: (_) => make_keyword('not'),
    keyword_exists: (_) => make_keyword('exists'),
    keyword_default: (_) => make_keyword('default'),
    keyword_with: (_) => make_keyword('with'),
    keyword_any: (_) => make_keyword('any'),
    keyword_begin: (_) => make_keyword('begin'),
    keyword_rows: (_) => make_keyword('rows'),
    keyword_trigger: (_) => make_keyword('trigger'),
    keyword_function: (_) => make_keyword('function'),
    keyword_returns: (_) => make_keyword('returns'),
    keyword_return: (_) => make_keyword('return'),
    keyword_atomic: (_) => make_keyword('atomic'),
    keyword_declare: (_) => make_keyword('declare'),
    keyword_language: (_) => make_keyword('language'),
    keyword_immutable: (_) => make_keyword('immutable'),
    keyword_volatile: (_) => make_keyword('volatile'),
    keyword_leakproof: (_) => make_keyword('leakproof'),
    keyword_parallel: (_) => make_keyword('parallel'),
    keyword_safe: (_) => make_keyword('safe'),
    keyword_restricted: (_) => make_keyword('restricted'),
    keyword_returns: (_) => make_keyword('returns'),
    keyword_input: (_) => make_keyword('input'),
    keyword_strict: (_) => make_keyword('strict'),
    keyword_cost: (_) => make_keyword('cost'),
    keyword_rows: (_) => make_keyword('rows'),
    keyword_out: (_) => make_keyword('out'),
    _or_replace: ($) => seq($.keyword_or, $.keyword_replace),
    direction: ($) => choice($.keyword_desc, $.keyword_asc),

    // Types
    keyword_null: (_) => make_keyword('null'),
    keyword_int: (_) => choice(make_keyword('int'), make_keyword('integer'), make_keyword('int4')),
    keyword_text: (_) => make_keyword('text'),
    keyword_name: (_) => make_keyword('name'),
    keyword_array: (_) => make_keyword('array'), // not included in _type since it's a constructor literal

    _type: ($) =>
      prec.left(
        seq(
          choice(
            $.keyword_boolean,
            $.bit,
            $.binary,
            $.varbinary,
            $.keyword_image,

            $.keyword_smallserial,
            $.keyword_serial,
            $.keyword_bigserial,

            $.tinyint,
            $.smallint,
            $.mediumint,
            $.int,
            $.bigint,
            $.decimal,
            $.numeric,
            $.double,
            $.float,

            $.keyword_money,
            $.keyword_smallmoney,

            $.char,
            $.varchar,
            $.nchar,
            $.nvarchar,
            $.numeric,
            $.keyword_string,
            $.keyword_text,

            $.keyword_uuid,

            $.keyword_json,
            $.keyword_jsonb,
            $.keyword_xml,

            $.keyword_bytea,
            $.keyword_inet,

            $.enum,

            $.keyword_date,
            $.keyword_datetime,
            $.keyword_datetime2,
            $.datetimeoffset,
            $.keyword_smalldatetime,
            $.time,
            $.timestamp,
            $.keyword_timestamptz,
            $.keyword_interval,

            $.keyword_geometry,
            $.keyword_geography,
            $.keyword_box2d,
            $.keyword_box3d,

            $.keyword_oid,
            $.keyword_name,
            $.keyword_regclass,
            $.keyword_regnamespace,
            $.keyword_regproc,
            $.keyword_regtype,

            field('custom_type', $.object_reference)
          ),
          optional($.array_size_definition)
        )
      ),

    int: ($) => unsigned_type($, parametric_type($, $.keyword_int)),
    array: ($) =>
      seq(
        $.keyword_array,
        choice(seq('[', comma_list($._expression), ']'), seq('(', $._dml_read, ')'))
      ),

    comment: (_) => /--.*/,
    // https://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment
    statement: ($) =>
      seq(
        optional(seq($.keyword_explain, optional($.keyword_analyze), optional($.keyword_verbose))),
        choice($._ddl_statement, $._dml_write, optional_parenthesis($._dml_read))
      ),

    _ddl_statement: ($) =>
      choice(
        $._create_statement,
        $._alter_statement,
        $._drop_statement,
        $._rename_statement,
        $._optimize_statement,
        $._merge_statement,
        $.comment_statement,
        $.set_statement,
        $.reset_statement
      ),

    _dml_write: ($) =>
      seq(
        seq(
          optional($._cte),
          choice(
            $._delete_statement,
            $._insert_statement,
            $._update_statement,
            $._truncate_statement,
            $._copy_statement
          )
        )
      ),

    _dml_read: ($) =>
      seq(
        optional(optional_parenthesis($._cte)),
        optional_parenthesis(choice($._select_statement, $.set_operation))
      ),

    cte: ($) =>
      seq(
        $.identifier,
        optional(paren_list(field('argument', $.identifier))),
        $.keyword_as,
        optional(seq(optional($.keyword_not), $.keyword_materialized)),
        wrapped_in_parenthesis(alias(choice($._dml_read, $._dml_write), $.statement))
      ),

    _argmode: ($) =>
      choice(
        $.keyword_in,
        $.keyword_out,
        $.keyword_inout,
        $.keyword_variadic,
        seq($.keyword_in, $.keyword_out)
      ),

    function_argument: ($) =>
      seq(
        optional($._argmode),
        optional($.identifier),
        $._type,
        optional(seq(choice($.keyword_default, '='), $.literal))
      ),

    function_arguments: ($) => paren_list($.function_argument, false),

    select: ($) => seq($.keyword_select, seq(optional($.keyword_distinct), $.select_expression)),

    select_expression: ($) => seq($.term, repeat(seq(',', $.term))),

    term: ($) => seq(field('value', choice($.all_fields, $._expression)), optional($._alias)),

    dollar_quote: () => /\$[^\$]*\$/,

    create_function: ($) =>
      seq(
        $.keyword_create,
        optional($._or_replace),
        $.keyword_function,
        $.object_reference,
        $.function_arguments,
        $.keyword_returns,
        choice(
          $._type,
          seq($.keyword_setof, $._type),
          seq($.keyword_table, $.column_definitions),
          $.keyword_trigger
        ),
        repeat(
          choice(
            $.function_language,
            $.function_volatility,
            $.function_leakproof,
            $.function_security,
            $.function_safety,
            $.function_strictness,
            $.function_cost,
            $.function_rows,
            $.function_support
          )
        ),
        // ensure that there's only one function body -- other specifiers are less
        // variable but the body can have all manner of conflicting stuff
        $.function_body,
        repeat(
          choice(
            $.function_language,
            $.function_volatility,
            $.function_leakproof,
            $.function_security,
            $.function_safety,
            $.function_strictness,
            $.function_cost,
            $.function_rows,
            $.function_support
          )
        )
      ),

    _function_return: ($) => seq($.keyword_return, $._expression),

    function_declaration: ($) =>
      seq(
        $.identifier,
        $._type,
        optional(
          seq(
            ':=',
            choice(
              wrapped_in_parenthesis($.statement),
              // TODO are there more possibilities here? We can't use `_expression` since
              // that includes subqueries
              $.literal
            )
          )
        ),
        ';'
      ),

    _function_body_statement: ($) => choice($.statement, $._function_return),

    function_body: ($) =>
      choice(
        seq($._function_return, ';'),
        seq(
          $.keyword_begin,
          $.keyword_atomic,
          repeat1(seq($._function_body_statement, ';')),
          $.keyword_end
        ),
        seq(
          $.keyword_as,
          alias($._dollar_quoted_string_start_tag, $.dollar_quote),
          optional(seq($.keyword_declare, repeat1($.function_declaration))),
          $.keyword_begin,
          repeat1(seq($._function_body_statement, ';')),
          $.keyword_end,
          optional(';'),
          alias($._dollar_quoted_string_end_tag, $.dollar_quote)
        ),
        seq($.keyword_as, alias(choice($._single_quote_string, $._double_quote_string), $.literal)),
        seq(
          $.keyword_as,
          alias($._dollar_quoted_string_start_tag, $.dollar_quote),
          $._function_body_statement,
          optional(';'),
          alias($._dollar_quoted_string_end_tag, $.dollar_quote)
        )
      ),

    function_language: ($) =>
      seq(
        $.keyword_language,
        // TODO Maybe we should do different version of function_body_statement in
        // regard to the defined language to match either sql, plsql or
        // plpgsql. Currently the function_body_statement support only sql.  And
        // maybe for other language the function_body should be a string.
        $.identifier
      ),

    function_volatility: ($) => choice($.keyword_immutable, $.keyword_stable, $.keyword_volatile),

    function_leakproof: ($) => seq(optional($.keyword_not), $.keyword_leakproof),

    function_safety: ($) =>
      seq($.keyword_parallel, choice($.keyword_safe, $.keyword_unsafe, $.keyword_restricted)),

    function_strictness: ($) =>
      choice(
        seq(
          choice($.keyword_called, seq($.keyword_returns, $.keyword_null)),
          $.keyword_on,
          $.keyword_null,
          $.keyword_input
        ),
        $.keyword_strict
      ),

    function_cost: ($) => seq($.keyword_cost, $._natural_number),

    function_rows: ($) => seq($.keyword_rows, $._natural_number),

    object_reference: ($) =>
      seq(optional(seq(field('schema', $.identifier), '.')), field('name', $.identifier)),

    _column_list: ($) => paren_list(alias($._column, $.column), true),
    update: ($) =>
      seq(
        $.keyword_update,
        optional($.keyword_only),
        choice($._mysql_update_statement, $._postgres_update_statement)
      ),

    _mysql_update_statement: ($) =>
      prec(0, seq(comma_list($.relation, true), repeat($.join), $._set_values, optional($.where))),

    _postgres_update_statement: ($) => prec(1, seq($.relation, $._set_values, optional($.from))),

    assignment: ($) =>
      seq(field('left', alias($._qualified_field, $.field)), '=', field('right', $._expression)),

    all_fields: ($) => seq(optional(seq($.object_reference, '.')), '*'),

    field: ($) => field('name', $.identifier),

    _qualified_field: ($) =>
      seq(
        optional(seq(optional_parenthesis($.object_reference), '.')),
        field('name', $.identifier)
      ),

    cast: ($) =>
      seq(
        field('name', $.keyword_cast),
        wrapped_in_parenthesis(seq(field('parameter', $._expression), $.keyword_as, $._type))
      ),

    invocation: ($) =>
      prec(
        1,
        seq(
          $.object_reference,
          choice(
            // default invocation
            paren_list(
              seq(optional($.keyword_distinct), field('parameter', $.term), optional($.order_by))
            ),
            // _aggregate_function, e.g. group_concat
            wrapped_in_parenthesis(
              seq(
                optional($.keyword_distinct),
                field('parameter', $.term),
                optional($.order_by),
                optional(
                  seq(choice($.keyword_separator, ','), alias($._literal_string, $.literal))
                ),
                optional($.limit)
              )
            )
          ),
          optional($.filter_expression)
        )
      ),

    exists: ($) => seq($.keyword_exists, $.subquery),

    _alias: ($) => seq(optional($.keyword_as), field('alias', $.identifier)),

    from: ($) =>
      seq(
        $.keyword_from,
        optional($.keyword_only),
        comma_list($.relation, true),
        optional($.index_hint),
        repeat(choice($.join, $.cross_join, $.lateral_join, $.lateral_cross_join)),
        optional($.where),
        optional($.group_by),
        optional($.window_clause),
        optional($.order_by),
        optional($.limit)
      ),

    relation: ($) =>
      prec.right(
        seq(
          choice($.subquery, $.invocation, $.object_reference, wrapped_in_parenthesis($.values)),
          optional(seq($._alias, optional(alias($._column_list, $.list))))
        )
      ),

    lateral_cross_join: ($) =>
      seq(
        $.keyword_cross,
        $.keyword_join,
        $.keyword_lateral,
        choice($.invocation, $.subquery),
        optional(
          choice(seq($.keyword_as, field('alias', $.identifier)), field('alias', $.identifier))
        )
      ),

    where: ($) => seq($.keyword_where, field('predicate', $._expression)),

    group_by: ($) =>
      seq($.keyword_group, $.keyword_by, comma_list($._expression, true), optional($._having)),

    _having: ($) => seq($.keyword_having, $._expression),

    order_by: ($) =>
      prec.right(seq($.keyword_order, $.keyword_by, comma_list($.order_target, true))),

    order_target: ($) =>
      seq(
        $._expression,
        optional(
          seq(
            choice($.direction, seq($.keyword_using, choice('<', '>', '<=', '>='))),
            optional(seq($.keyword_nulls, choice($.keyword_first, $.keyword_last)))
          )
        )
      ),

    limit: ($) => seq($.keyword_limit, $.literal, optional($.offset)),

    _expression: ($) =>
      prec(
        1,
        choice(
          $.literal,
          alias($._qualified_field, $.field),
          $.parameter,
          $.list,
          $.case,
          $.window_function,
          $.subquery,
          $.cast,
          alias($.implicit_cast, $.cast),
          $.exists,
          $.invocation,
          $.binary_expression,
          $.subscript,
          $.unary_expression,
          $.array,
          $.interval,
          $.between_expression,
          $.parenthesized_expression
        )
      ),

    parenthesized_expression: ($) => prec(2, wrapped_in_parenthesis($._expression)),

    unary_expression: ($) =>
      choice(
        ...[
          [$.keyword_not, 'unary_not'],
          [$.bang, 'unary_not'],
          [$.keyword_any, 'unary_not'],
          [$.keyword_some, 'unary_not'],
          [$.keyword_all, 'unary_not'],
          [$.op_unary_other, 'unary_other']
        ].map(([operator, precedence]) =>
          prec.left(precedence, seq(field('operator', operator), field('operand', $._expression)))
        )
      ),
